# Arxiv-MCP

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
arxiv_searcher/: arxiv_categories.json  arxiv_mcp.py  remote_arxiv_mcp.py
