[project]
name = "arxiv_searcher"
version = "0.2.0"
description = "MCP Arxiv Searcher server"
authors = [
    { name = "Emi", email = "edm@unex.es" }
]
requires-python = ">=3.11"
dependencies = [
    "arxiv",
    "requests",
    "pandas",
    "scikit-learn",
    "fastmcp",
    "ruff>=0.13.1",
    "pymupdf>=1.26.4",
]

[tool.uv]
# uv-specific configuration can go here if needed

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arxiv_searcher"]
